<resources>
    <string name="app_name">ABE</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title">Title</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="preference_file_key">com.example.ABE.PREFERENCE_FILE_KEY</string>
    <string name="failed_connect_msg">Failed to connect to the server. Please check your internet connection.</string>
    <string name="try_again">Try Again</string>
    <string name="location">Location</string>
    <string name="open_in_map">Open in Map</string>
    <string name="category">Category</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="greeting">Welcome back to</string>
    <string name="bondoman">Bondoman</string>
    <string name="get_photo_from_gallery">Get Photo from Gallery</string>
    <string name="scan">Scan</string>
    <string name="graph">Graph</string>
    <string name="settings">Settings</string>
    <string name="transaction">Transaction</string>

    <string-array name="Categories">
        <item>Income</item>
        <item>Expenses</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="twibbon_overlay">Twibbon overlay</string>
    <string name="waiting_for_receipt_upload">Waiting for receipt upload</string>
</resources>