<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.abe.ui.form_transaction.FormTransactionViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formTransaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.form_transaction.FormTransaction">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formTitleContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:boxStrokeColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            app:helperTextTextColor="@color/destructive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="255"
                app:boxStrokeColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/title"
                android:text="@={viewModel.title}"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formAmountContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="5dp"
            app:helperTextTextColor="@color/destructive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formTitleContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formAmountEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="10"
                app:boxStrokeColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/amount"
                android:text="@={viewModel.amount}"
                android:inputType="number"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formCategoryContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/category"
            android:textColorHint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            app:helperTextTextColor="@color/destructive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formAmountContainer"
            app:boxStrokeColor="@color/black"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:labelFor="@+id/categoryAutocomplete"
                android:text="@string/category"
                />

            <AutoCompleteTextView
                android:id="@+id/categoryAutocomplete"
                app:boxStrokeColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:labelFor="@+id/formCategoryContainer"
                android:text="@={viewModel.category}" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnOpenMap"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:layout_marginTop="8dp"
            android:text="@string/open_in_map"
            android:textColor="@color/primary"
            android:background="@android:color/transparent"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/formCategoryContainer"
            app:layout_constraintTop_toBottomOf="@+id/formCategoryContainer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formLocationContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            android:layout_marginHorizontal="20dp"
            app:helperTextTextColor="@color/destructive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnOpenMap">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formLocationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/location"
                android:inputType="none"
                android:text="@={viewModel.location}"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/save"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/formLocationContainer"
            tools:layout_editor_absoluteX="20dp" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/destructive"
            android:text="@string/delete"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/btnSave"
            tools:layout_editor_absoluteX="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
